# youtube-summarizer

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
processors/: summary_generator.py  timestamp_generator.py  video_processor.py
transcribers/: base_transcriber.py  whisper_transcriber.py  youtube_api_transcriber.py
utils/: file_utils.py  summarizer.py  time_helpers.py  timestamp_generator.py  transcript_utils.py  whisper_transcriber.py  youtube_api.py  youtube_dl_wrapper.py  youtube_utils.py
