[project]
name = "youtube-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "pytube>=15.0.0",
    "whisper>=1.1.10",
    "youtube-dl>=2021.12.17",
    "youtube-transcript-api>=1.0.3",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["ALL"]
ignore = ["T201", "Q000"]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I"]

[tool.ruff.isort]
known-first-party = ["youtube_summarizer"]
